--- a/build.xml
+++ b/build.xml
@@ -71,4 +71,13 @@
     nbproject/build-impl.xml file. 
 
     -->
+    <target name="-post-jar">
+        <copy file="maps/map A.xml" flatten="true" todir="${dist.dir}/maps"/>
+        <copy file="maps/map B.xml" flatten="true" todir="${dist.dir}/maps"/>
+        <copy file="maps/map C.xml" flatten="true" todir="${dist.dir}/maps"/>
+        
+        <copy file="programs/Program A.xpg" flatten="true" todir="${dist.dir}/programs"/>
+        <copy file="programs/Program B.xpg" flatten="true" todir="${dist.dir}/programs"/>
+        
+    </target>     
 </project>
